// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-component when called in an existing project when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ cd oh-wow-another-component-can-you-believe-it
  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Further reading:

   - TODO: CDX-1403 Add link to documentation in source code and error message

  Happy coding!
"
`;

exports[`@coveo/create-atomic-component when called in an existing project when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ewQGf3/bnIIj+Rv249cv7K7YGsg=",
                      "name": "stencil-docs.d.ts",
                    },
                  ],
                  "hash": "OzYoobNX1XCpcFrvvtsD00f4Rwg=",
                  "name": "docs",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "YIrD4hdL3VB+rGQW4bFFcUQZvMs=",
                  "name": "package.json",
                },
                HashedFile {
                  "hash": "0paD+lp3fCIv4J/d+YrJ6gkGSbo=",
                  "name": "readme.md",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "qJnWpbM0djxX/iTkEr7sFyWoEKE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "cyiSAzblslLaM9FtFOxZflhDW5E=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                  ],
                  "hash": "fDk5mo7oKtbUQEWcSOMYtlLW0QE=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "0xRQBP6tj5z9GlupdU/EKm6JLvs=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "n96H+sIF9PTBlNDO1EYe+68/FyE=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "JH11Axo81BFlmjRpzV+1x7/Qz08=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "cNI5cIkbymHsHhhwXS1Qj95E0+E=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-component when called with a component name without hyphen when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ cd atomic-nohypen
  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Further reading:

   - TODO: CDX-1403 Add link to documentation in source code and error message

  Happy coding!
"
`;

exports[`@coveo/create-atomic-component when called with a component name without hyphen when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "1ikv2lsH7F+45BxxwjCFSU9K7Vk=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "tS25lkQb7dlQXKxuykh6R0/CIPo=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "Zd4hjEzrsZbYZVpDMlMpAGTqMoI=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "haULVlf7rK7ZET8PXUv1iWC0J0s=",
              "name": "atomic-nohypen",
            },
          ],
          "hash": "n5ckiEbCa54h8qEg86Ki22xq26o=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "LK0ymv1RBlpdcvt6y5L6+8Eni2s=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "kH98WWKUjOUkokOkoutOyg4mB2s=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-component when called with a valid component name when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ cd valid-component-name
  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Further reading:

   - TODO: CDX-1403 Add link to documentation in source code and error message

  Happy coding!
"
`;

exports[`@coveo/create-atomic-component when called with a valid component name when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "ldSLKcb7Xi7Wj0nMbU5sGWEIf60=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "YZICfNAhO7c4mopg1lRMvtn4zoc=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "GPCobV/2HmZJ0cpyuZQf9TQeVf8=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "Kul8wgGjgvPbNV/r7+rbKA4gz1A=",
              "name": "valid-component-name",
            },
          ],
          "hash": "poaQQtGkOgcGAo7bLrZvItJoUq4=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "VTzXH36O2+H9dOzAjwOQeZDY0HQ=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "hZbXPC3OntldNwjdwSN4L48fz8o=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-component when called without any args when initializing should ouptut a confirmation message upon success 1`] = `
"
  Project successfully configured

  We suggest that you begin by typing:

  $ cd undefined
  $ npm install
  $ npm start

  $ npm start
    Starts the development server.

  $ npm run build
    Builds your project in production mode.

  Further reading:

   - TODO: CDX-1403 Add link to documentation in source code and error message

  Happy coding!
"
`;

exports[`@coveo/create-atomic-component when called without any args when initializing should setup a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "Y0GH5FenXr1mfAQ4A9lb5dvrjZk=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "sample-component.css",
                    },
                    HashedFile {
                      "hash": "5oFqFve0WaOV3g/ptfVo98a5B4Q=",
                      "name": "sample-component.tsx",
                    },
                  ],
                  "hash": "65UuO8iiPnNRHZur5KT+HoQqFCw=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "DNTPZTeWJfCjTGqD+edK5gP5vUM=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "5vzqQLLiRZ2nCfhEwc06d2g4Rfc=",
              "name": "sample-component",
            },
          ],
          "hash": "dVRiHmCu/RBCejHgOHwxQ/Kv5aY=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "zazxLKCJ8CSzfmLry0gDb+o4cN8=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "Ia1ImP4GPA5wtS1XTB7mAPjgAxc=",
  "name": "no-args",
}
`;
